syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "Protos/customer.proto";
import "Protos/account_type.proto";

service AccountService {
  rpc GetAll (google.protobuf.Empty) returns (GetAllAccountsResponse);
  rpc GetById (GetAccountByIdRequest) returns (AccountModel);
  rpc Add (AddAccountRequest) returns (AccountModel);
  rpc Update (UpdateAccountRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteAccountRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateAccountBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteAccountBulkRequest) returns (google.protobuf.Empty);
}

message AccountModel {
  int32 account_id = 1;
  optional int32 customer_id = 2;
  optional int32 type_id = 3;
  string iban = 4;
  optional string balance = 5;
  optional google.protobuf.Timestamp created_at = 6;
  optional bool is_active = 7;
}

message GetAllAccountsResponse {
  repeated AccountModel accounts = 1;
}

message GetAccountByIdRequest {
  int32 account_id = 1;
}

message AddAccountRequest {
  optional int32 customer_id = 1;
  optional int32 type_id = 2;
  string iban = 3;
  optional string balance = 4;
  optional bool is_active = 5;
}

message UpdateAccountRequest {
  int32 account_id = 1;
  optional int32 customer_id = 2;
  optional int32 type_id = 3;
  string iban = 4;
  optional string balance = 5;
  optional bool is_active = 6;
}

message DeleteAccountRequest {
  int32 account_id = 1;
}

message UpdateAccountBulkRequest {
  repeated UpdateAccountRequest accounts = 1;
}

message DeleteAccountBulkRequest {
  repeated DeleteAccountRequest accounts = 1;
}
