syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

import "google/protobuf/timestamp.proto";
import "Protos/custom_types.proto";
import "google/protobuf/empty.proto";

service CustomerService {
  rpc GetAll (GetAllRequest) returns (GetAllCustomersResponse);
  rpc GetById (GetCustomerByIdRequest) returns (CustomerModel);
  rpc GetBySubstring (GetBySubstringRequest) returns (GetAllCustomersResponse);
  rpc GetByDateRange (GetByDateRangeRequest) returns (GetAllCustomersResponse);
  rpc Add (AddCustomerRequest) returns (CustomerModel);
  rpc Update (UpdateCustomerRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteCustomerRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateCustomerBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteCustomerBulkRequest) returns (google.protobuf.Empty);
}

message CustomerModel {
  int32 customer_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  optional string phone = 5;
  optional DateOnly birth_date = 6;
  optional google.protobuf.Timestamp created_at = 7;
}

message GetBySubstringRequest{
  string sub_str = 1;
  optional int32 page_n = 2;
  optional int32 page_size = 3;
  string order = 4;
  optional bool desc = 5;
}

message GetAllCustomersResponse {
  repeated CustomerModel customers = 1;
}

message GetCustomerByIdRequest {
  int32 customer_id = 1;
}

message AddCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  optional string phone = 4;
  optional DateOnly birth_date = 5;
}

message UpdateCustomerRequest {
  int32 customer_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  optional string phone = 5;
  optional DateOnly birth_date = 6;
}

message DeleteCustomerRequest {
  int32 customer_id = 1;
}

message UpdateCustomerBulkRequest {
  repeated UpdateCustomerRequest customers = 1;
}

message DeleteCustomerBulkRequest {
  repeated DeleteCustomerRequest customers = 1;
}
